# automated-transcript-gen

./: .gitignore  CLAUDE.md  README.md  goal.md  pyproject.toml
docs/: architecture.md  cliproxyapi-setup.md  research.md
prompts/: judge.md  monitor.md
src/transcript_gen/: config.py  evaluate.py  metrics.py  modules.py  optimize.py  prompt_logger.py  signatures.py  tasks.py  utils.py
tests/: test_metrics.py  test_pipeline.py  test_prompt_logger.py  test_signatures.py
